2002-05-06  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* ADR_test.py: New test.

2002-05-06  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* degenerate.py: New test.

2002-04-30  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* Improve output for all tests.

2002-04-29  Peter Bienstman <Peter.Bienstman@rug.ac.be>

	* metal_splitter.py: New test.
	* cladding.py: New test.
	* grating.py: New test.
	* expressions: New test.

2002-02-13  Lieven Vanholme  <Lieven.Vanholme@rug.ac.be>

        * PhC_splitter.py: Update for new Blochsolver.

2001-10-30  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * blazed_grating.py: Use relative instead of absolute precision.
	* substacks.py: Ditto.
	* planarTE.py: Ditto.
	* planarTM.py: Ditto.
	* VCSEL.py: Ditto.
	* SpE.py: Ditto.
	* PhC_splitter.py: Ditto.

2001-10-02  Peter Bienstman  <Peter.Bienstman@rug.ac.be>

        * eps.py: Relax precision.
